// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/blocksEditor/blocksEditor > should match snapshot on empty 1`] = `
<div>
  <div
    class="BlocksEditor"
  >
    <div
      class="Editor"
    >
      <div
        class="Combobox RootInput"
      >
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="Combobox__live-region"
          role="log"
        />
        <div
          class="RootInput__control"
        >
          <div
            class="RootInput__value-container"
          >
            
            
            <div
              class="RootInput__placeholder"
            >
              Introduce your text or your slash command
            </div>
            <input
              aria-controls="cl-0"
              aria-expanded="false"
              autocomplete="off"
              autofocus=""
              class="RootInput__input"
              role="combobox"
              type="text"
            />
          </div>
          
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`components/blocksEditor/blocksEditor > should match snapshot with blocks 1`] = `
<div>
  <div
    class="BlocksEditor"
  >
    <div>
      <div
        class="BlockContent   "
        data-testid="block-content"
        style="opacity: 1;"
      >
        <span
          class="action"
          data-testid="add-action"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </span>
        <span
          class="action"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <div
          class="content"
        >
          <div>
            <h1
              id="title"
            >
              Title
            </h1>
          </div>
        </div>
      </div>
      
    </div>
    <div>
      <div
        class="BlockContent   "
        data-testid="block-content"
        style="opacity: 1;"
      >
        <span
          class="action"
          data-testid="add-action"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </span>
        <span
          class="action"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <div
          class="content"
        >
          <div>
            <h2
              id="sub-title"
            >
              Sub title
            </h2>
          </div>
        </div>
      </div>
      
    </div>
    <div>
      <div
        class="BlockContent   "
        data-testid="block-content"
        style="opacity: 1;"
      >
        <span
          class="action"
          data-testid="add-action"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </span>
        <span
          class="action"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <div
          class="content"
        >
          <div>
            <h3
              id="sub-sub-title"
            >
              Sub sub title
            </h3>
          </div>
        </div>
      </div>
      
    </div>
    <div>
      <div
        class="BlockContent   "
        data-testid="block-content"
        style="opacity: 1;"
      >
        <span
          class="action"
          data-testid="add-action"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </span>
        <span
          class="action"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <div
          class="content"
        >
          <div
            class="octo-editor-preview"
          >
            <p>
              Some 
              <strong>
                markdown
              </strong>
               text
            </p>
          </div>
        </div>
      </div>
      
    </div>
    <div>
      <div
        class="BlockContent   "
        data-testid="block-content"
        style="opacity: 1;"
      >
        <span
          class="action"
          data-testid="add-action"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </span>
        <span
          class="action"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <div
          class="content"
        >
          <div
            class="octo-editor-preview"
          >
            <p>
              Some multiline
              <br />
              <strong>
                markdown
              </strong>
               text
            </p>
            

            <h3
              id="with-items"
            >
              With Items
            </h3>
            

            <ul>
              

              <li>
                Item 1
              </li>
              

              <li>
                Item2
              </li>
              

              <li>
                Item3
              </li>
              

            </ul>
          </div>
        </div>
      </div>
      
    </div>
    <div>
      <div
        class="BlockContent   "
        data-testid="block-content"
        style="opacity: 1;"
      >
        <span
          class="action"
          data-testid="add-action"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </span>
        <span
          class="action"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </span>
        <div
          class="content"
        >
          <div
            class="CheckboxView"
          >
            <input
              data-testid="checkbox-check"
              type="checkbox"
            />
            <div>
              <p>
                Checkbox
              </p>
            </div>
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="Editor"
    >
      <div
        class="Combobox RootInput"
      >
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="Combobox__live-region"
          role="log"
        />
        <div
          class="RootInput__control"
        >
          <div
            class="RootInput__value-container"
          >
            
            
            <div
              class="RootInput__placeholder"
            >
              Introduce your text or your slash command
            </div>
            <input
              aria-controls="cl-7"
              aria-expanded="false"
              autocomplete="off"
              autofocus=""
              class="RootInput__input"
              role="combobox"
              type="text"
            />
          </div>
          
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;
